# minice

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.minice.jp.txt  acconfig.h  configure.in  minice.c  minice.conf  minice.h  mkinstalldirs  readconf.c
