dnl Process this file with autoconf to produce a configure script.
AC_INIT(minice.c)
PACKAGE=minice
VERSION=1.0.3

AM_INIT_AUTOMAKE(${PACKAGE},${VERSION})
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -lresolv:
AC_CHECK_LIB(resolv, gethostbyaddr)
AC_CHECK_LIB(shout, shout_init)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname mkfifo socket setitimer)

AC_OUTPUT(Makefile)
